--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Benjamin Roucheyrolles",
   "license": "ISC",
   "dependencies": {
-    "express": "4.14.0"
+    "express": "4.14.0",
+    "pug": "^2.0.0-beta6"
   }
 }
